--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,9 +9,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>My name is Nguyen Huu Long. I am now 21 years old and study at International University.</p>
       </div>
       <div class="col-lg-4">
         <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
